# workflow-tool

./: README.ko.md  README.md  pyproject.toml  requirements.txt
examples/: README.ko.md  README.md
examples/custom-plugins/: README.ko.md  README.md  workflow.ko.yaml
examples/custom-plugins/validators/: __init__.py  custom.py
examples/full-project/: README.ko.md  README.md  workflow.ko.yaml
examples/hooks/: auto-review.sh
examples/simple/: README.ko.md  README.md  workflow.ko.yaml
tests/: __init__.py  test_context.py  test_parallel_tracks.py  test_phase_cli.py  test_phase_cycle.py  test_plugins.py  test_scheduler.py  test_security.py  test_wrappers.py
workflow/: MIGRATION_GUIDE.md  README.md  STANDALONE_GUIDE.md  __init__.py  __main__.py  cli.py  init.py  wrappers.py
workflow/core/: __init__.py  audit.py  auth.py  config.py  context.py  controller.py  engine.py  parser.py  scheduler.py  schema.py  state.py  validator.py
workflow/docs/history/: m42-workflow-tool.md
workflow/i18n/: __init__.py  detector.py
workflow/i18n/messages/: en.yaml  ko.yaml
workflow/plugins/: fs.py  shell.py
workflow/templates/: default_workflow.yaml
workflow/tutorial/: __init__.py
workflow/tutorial/content/en/: 00_intro.md  01_installation.md  02_basic_commands.md  03_secrets.md  04_advanced.md  05_best_practices.md
workflow/tutorial/content/ko/: 00_intro.md  01_installation.md  02_basic_commands.md  03_secrets.md  04_advanced.md  05_best_practices.md
